k8s/apps/codeserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: codeserver
  name: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
      - image: lscr.io/linuxserver/openvscode-server:latest
        name: openvscode-server
        ports:
          - containerPort: 3000
