k8s/apps/codeserver/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: codeserver-svc
  name: codeserver-svc
spec:
  ports:
  - name: 3000-3000
    nodePort: 30300
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: codeserver
  type: NodePort
