k8s/apps/codeserver/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ingress
spec:
  rules:
  - host: ocs.site
    http:
      paths:
      - backend:
          service:
            name: codeserver-svc
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
