k8s/apps/codeserver/manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: codeserver
  name: codeserver
  namespace: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
      - image: lscr.io/linuxserver/openvscode-server:latest
        name: openvscode-server
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: codeserver-svc
  name: codeserver-svc
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: codeserver
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ingress
spec:
  rules:
  - host: rit.ocs.com
    http:
      paths:
      - backend:
          service:
            name: codeserver-svc
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
